syntax = "proto3";
package users;
option go_package=".;userservice";

import "google/protobuf/timestamp.proto";

message UserRequest {
    int64 id = 1;
}

message BaseRequest {
    string name = 1;
    string email = 2;
    string password = 3;
}

message UserResponse {
    string name = 1;
    string email = 2;
    string password = 3;
    int64 id = 4;
    google.protobuf.Timestamp createdAt = 5;
    string token = 6;
}

message AckResponse {
    bool ok = 1;
}

service User{
    rpc GetUser(UserRequest) returns (UserResponse) {};
    rpc Login(BaseRequest) returns (UserResponse) {};
    rpc CreateUser(BaseRequest) returns (UserResponse) {};
    rpc DeleteUser(UserRequest) returns (AckResponse) {};
}